# ray-tracer

./: CMakeLists.txt  file_output.cpp  file_output.h  main.cpp  pt2_scene1.txt  pt2_scene1_sphereonly.txt  pt2_scene1_sphereonly_output.ppm  pt2_scene2.txt  pt2_scene3.txt  pt2s1_output.ppm  pt2s2_output.ppm  ray_trace.cpp  ray_trace.h  ray_tracer_classes.cpp  ray_tracer_classes.h  scene1_output.ppm  scene2_output.ppm  scene3.txt  scene3_output.ppm  scene3_reflective_output.ppm  scene_importer.h
